new generic activities endpoint
